[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/user interface/QuitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/user interface/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/screens/MenuScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/user interface/themes/MinimalUI/MinimalUI.tres" type="Theme" id=4]
[ext_resource path="res://assets/user interface/bubblebuttons/png/Button_68.png" type="Texture" id=6]
[ext_resource path="res://assets/user interface/bubblebuttons/png/Button_80.png" type="Texture" id=7]
[ext_resource path="res://assets/user interface/bubblebuttons/png/Button_40.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 172, 173 )

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = -521.0
margin_right = 186.0
margin_bottom = 279.0
custom_constants/separation = 15

[node name="DatiPazientiButton" type="Button" parent="Menu"]
margin_right = 400.0
margin_bottom = 25.0
text = "DATI PAZIENTI"

[node name="SettingsButton" parent="Menu" instance=ExtResource( 2 )]
margin_top = 40.0
margin_right = 400.0
margin_bottom = 283.0
rect_pivot_offset = Vector2( 200, 100 )
text = "OPZIONI"
script = null

[node name="CreditsButton" parent="Menu" instance=ExtResource( 2 )]
margin_top = 298.0
margin_right = 400.0
margin_bottom = 541.0
rect_pivot_offset = Vector2( 200, 100 )
text = "CREDITI"
script = null

[node name="QuitButton" parent="Menu" instance=ExtResource( 1 )]
margin_top = 556.0
margin_right = 400.0
margin_bottom = 800.0
rect_pivot_offset = Vector2( 200, 100 )
script = null

[node name="LogoutButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -490.0
margin_top = -210.0
margin_right = -340.0
margin_bottom = -60.0
rect_pivot_offset = Vector2( 75, 75 )
theme = ExtResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
script = null

[node name="ProfileButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -292.0
margin_top = -210.0
margin_right = -142.0
margin_bottom = -60.0
rect_pivot_offset = Vector2( 75, 75 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
icon_align = 1
script = null

[node name="LeaderboardButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -210.0
margin_right = 22.0
margin_bottom = -60.0
rect_pivot_offset = Vector2( 75, 75 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 2 )
icon_align = 1
script = null

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Menu/DatiPazientiButton" to="." method="_on_DatiPazientiButton_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
